--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,40 @@
 *.jar
 *.war
 *.ear
+
+.*
+!.gitignore
+
+#
+# java
+#
+*.class
+*.jar
+*.Ignored.java
+*.cvsignore
+.settings
+.project
+target/
+bin/
+log/
+
+#
+# execucao em *nix
+#
+nohup.out
+
+#
+# git merge conflict backup files.
+#
+*.orig
+
+#
+# arquivos log sao resultados de execucoes
+#
+*.log
+*.lock
+*.pid
+tomcat
+war
+*.patch
+
