--- a/sistema-web/src/main/webapp/WEB-INF/web.xml
+++ b/sistema-web/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
     xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
     version="2.4">
 
-    <display-name>HelloWorld Application</display-name>
+    <display-name>Sistema</display-name>
     <welcome-file-list>
     	<welcome-file>index.html</welcome-file>
     </welcome-file-list>
